@@ -1,5 +1,3 @@
-## $Id$
-##
 ##  Process this file with automake to create Makefile.in
 
 includedir = @includedir@/tao
@@ -8,6 +6,9 @@ ACE_ROOT = $(top_srcdir)/..
 ACE_BUILDDIR = $(top_builddir)/..
 TAO_ROOT = $(top_srcdir)
 TAO_BUILDDIR = $(top_builddir)
+
+nobase_include_HEADERS =
+lib_LTLIBRARIES =
 
 ## Makefile.TAO.am 
 
@@ -297,7 +298,7 @@ Interpretive_Marshaling = \
 IDL_Compiler = \
   Managed_Types.cpp
 
-lib_LTLIBRARIES = libTAO.la
+lib_LTLIBRARIES += libTAO.la
 
 libTAO_la_CPPFLAGS = \
   -I$(ACE_ROOT) \
@@ -320,7 +321,7 @@ libTAO_la_LDFLAGS = \
 libTAO_la_LIBADD = \
   $(ACE_BUILDDIR)/ace/libACE.la
 
-nobase_include_HEADERS = \
+nobase_include_HEADERS += \
   Abstract_Servant_Base.h \
   Acceptor_Filter.h \
   Acceptor_Impl.h \
@@ -1013,8 +1014,6 @@ libTAO_PortableServer_la_SOURCES = \
   PortableServer/Default_Acceptor_Filter.cpp \
   PortableServer/Default_Policy_Validator.cpp \
   PortableServer/Default_Servant_Dispatcher.cpp \
-  PortableServer/ImR_LocatorC.cpp \
-  PortableServer/ImR_LocatorS.cpp \
   PortableServer/ImplRepoC.cpp \
   PortableServer/ImplRepoS.cpp \
   PortableServer/ImplRepo_i.cpp \
@@ -1055,8 +1054,6 @@ nobase_include_HEADERS += \
   PortableServer/Default_Acceptor_Filter.h \
   PortableServer/Default_Policy_Validator.h \
   PortableServer/Default_Servant_Dispatcher.h \
-  PortableServer/ImR_LocatorC.h \
-  PortableServer/ImR_LocatorS.h \
   PortableServer/ImplRepoC.h \
   PortableServer/ImplRepoS.h \
   PortableServer/ImplRepo_i.h \
@@ -1088,10 +1085,8 @@ nobase_include_HEADERS += \
   PortableServer/poa_macros.h \
   PortableServer/portableserver_export.h \
   PortableServer/Active_Object_Map.i \
-  PortableServer/ImR_LocatorC.inl \
-  PortableServer/ImR_LocatorS.inl \
-  PortableServer/ImplRepoC.inl \
-  PortableServer/ImplRepoS.inl \
+  PortableServer/ImplRepoC.i \
+  PortableServer/ImplRepoS.i \
   PortableServer/Key_Adapters.i \
   PortableServer/Object_Adapter.i \
   PortableServer/POA.i \
@@ -1106,7 +1101,6 @@ nobase_include_HEADERS += \
   PortableServer/ServerInterceptorAdapter.inl \
   PortableServer/ServerRequestInfo.inl \
   PortableServer/PolicyS_T.cpp \
-  PortableServer/ImR_Locator.pidl \
   PortableServer/ImplRepo.pidl \
   PortableServer/PortableServer.pidl
 
